assets/css/main.css
/* ... */
.hero-2 .clouds img {
	/*border: solid white 10px; */
	position: absolute;
	top: 0;
	max-width: 50%;
	/*animation: animate-clouds calc(8s * var(--i)) linear  infinite;*/
	/*animation: animate-clouds 30s linear infinite;*/

	/*Improve compatibility and optimisation for multiple browsers*/
	-webkit-animation: animate-clouds calc(24s * var(--i)) linear  infinite;
	-moz-animation: animate-clouds calc(24s * var(--i)) linear  infinite;
	-o-animation: animate-clouds calc(24s * var(--i)) linear  infinite;
	animation: animate-clouds calc(24s * var(--i)) linear  infinite;

}

/*
@keyframes animate-clouds {
	0% {
		transform: translateX(-100%)
	}

	100% {
		transform: translateX(100%)
	}
}


*/

@keyframes animate-clouds {
	from {
		transform: translateX(-200%)
	}

	to {
		transform: translateX(200%)
	}
}





.hero-2{
	background-image: url("/assets/img/atlas-shrugged-1.png");
	min-height: 60em;
	width: 100%;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: top;
	position: relative;
	width: 100%;
	height: 100vh;


}

/*Hero cocolor: #0082DD or #006AB6*/
.hero-1{
	/*Backup baner background in case that the pic doesn't load..*/
	/*background-color: #0082DD;
    background-color: var(--bg-hero-color-1);*/
	/*background-color: white;*/
	min-height: 60em;
	width: 100%;
}



.hero-text{
	/*border: solid yellow 2px;*/
	display: flex;
	flex-direction: column;
	align-items: center;
	color: #DCDCDD;
	padding-top: 4em;






}


#about .container-par-img > h2, 
#skills > h2, 
#projects > h2,
#contact > h2{
    font-family: "diner-obeseregular";
    font-size: 3rem;
    letter-spacing: 1rem;
}


.hero-text h1 {
	font-family: "diner-obeseregular", sans-serif, monospace;
	font-size: 3em;
	/*letter-spacing: 0.6em;*/
	letter-spacing: 0.6em;
	font-size: 5em;
	padding-left: 0.6em;
	padding-right: 0em;
}

.hero-text p {
	border: none;
	font-size: 1.5em;
	text-shadow: 4px 4px 5px black;

}

.hero-text h2{
	margin: 0;
	padding-left: 0em;
	padding-right: 0em;
	text-shadow: 3px 1px 2px grey;

}

.hero-text .button{
	z-index: 1;
}
/*The button styles*/
.button {

  text-decoration: none;
  outline: none;
  text-align: center;
  line-height: 3;
  color: white;
  font-weight: 600;
}

.button:link, .button:visited, .button:focus {
  background: #12804B;
}

.button:hover {
  background: #1BCD77;
}

.button:active {
  background: #8661C1;
  color: white;
}




/*About me section*/
.about {
	min-height: 80rem;
	padding-top: 6rem;
	width: 100%;
	/*background: linear-gradient(to bottom, black, white);  */
	text-indent: 1em;
	display: flex;
	flex-direction: column;
	align-items: center;

}



.container-par-img{
	width: 70%;
	height: 100%;

}

.about-par p:nth-child(1){
	padding-top: 0rem;
	margin-top: 0rem;
}

.about-par {
	margin-bottom: 2rem;
}

.about .button{
	margin-left: 1rem;
}

.about * {
	/*border: 1px solid yellow;*/
}



.about .about-img {
float: right;
width: 15rem;
margin: 1rem;
border-radius: 10px;
box-shadow: 10px 10px 5px black;


}


.floating {  
    animation-name: floating;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
    margin-left: 30px;
    margin-top: 5px;
}

@keyframes floating {
    from { transform: translate(0,  0px); }
    65%  { transform: translate(0, 15px); }
    to   { transform: translate(0, -0px); }    
}



.about p {
	font-size: 1.6rem;
	line-height: 1.8rem;
}






/*Skills area*/
.logos{
	/*width: 100%;*/
	/*border: 4px solid black;*/
	/*object-fit: contain;*/
}


.skills {
	min-height: 50em;
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	border: none;
	font-size: 1.2rem;
}



.main-skills {
	/*display: flex;*/
}

/*
.main-skills p {
	width: 10em;
	height: 20em;
	margin: 2em;
	border: none;
}
*/

/*by using these below codes your iPhone and MAC image or picture stretch issue will be resolved*/
.main-skills{
	/*border: 4px solid black;*/
    width: 50%;
	float: left;
    height: auto;
    padding-right:1rem;
	padding-left: 5rem;
}

.main-skills .logos{
	width: 30%;
	margin-left: auto;
	margin-right: auto;
	filter: blur(10px);
}

.main-skills .logos:hover {
	filter: blur(0);
}


.skills p{
	border: none;
}

.skills .button {
	padding-top: 0em;
	padding-bottom: 0em;
}

.skills ul {
	list-style: none;
	border: none;
}

.skills img{
	/*Targeting the 3 logso picture HTML CSS JAVASCRIPT*/
	/*max-width: 100%;*/
	/*border: solid red 2px;*/
}

.additional-skills {
		margin-bottom: 4rem;
}

.skills .outer-container-skills-list{
	/*border: solid red 2px;*/
	margin-bottom: 10rem;
	display: flex;
	justify-content: center;
}

.skills #container-skills-list {
	/*border: solid black 2px;*/
	width: 100%;
	margin: 0rem;
	display: flex;
    flex-wrap: wrap;



}

.skills #container-skills-list ul{
		/*border: solid blue 2px;*/
		flex: 0 0 25%;
		font-family: monospace, sans-serif;
        color: #29BF12;
        color: #22FF00; 
		font-size: 1.5rem;
		font-weight: 900;
		/*text-shadow: 3px 3px 3px #590366;*/
		text-shadow: 5px 5px 5px #590366, 2px 2px 3px #590366;
		/*text-decoration: underline solid #590366 2px;*/

}

.skills .button {
}

.skills .see-my-projects-btn {
    margin-top: 10rem;
	margin-bottom: 8rem;
}




/*Certificates area*/

.certificates {
    /*border: 10px solid red;*/
    width: 100vw;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    /*align-items: center;*/
    justify-content: center;
    align-items: center;
}

.certificates .certificate {
    /*border: 1px solid yellow;*/
    margin: 10px;

}


.certificates .certificate img {
    width: 600px;
    box-shadow: 10px 10px 30px #0a0a23; 
}


/*My Projects */
.projects{
		/*border: solid blue 2px;*/
		border-top: 1px dotted grey;
		width: 100%;
		display: flex;
		flex-direction: column;
		align-items: center;



}

.projects p {
	font-size: 1.2em;
	padding: 1rem;
}
/* ... */

